# diana

./: .dockershell.sh  .gitignore  .ports.env  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  auth.html  bonnie.toml  config.html  docker-compose.yml  getting_started.html  index.html  intro.html  print.html  searchindex.js  searchindex.json  serverless.html  writing_schemas.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: book.yml  ci.yml
core/: auth.html  getting_started.html  queries_mutations.html
dev_utils/: Cargo.toml
dev_utils/src/: ctx.rs  db.rs  errors.rs  lib.rs  load_env.rs  oid.rs
dev_utils/src/schemas/: users.rs
docs/: book.toml
docs/src/: SUMMARY.md  auth.md  config.md  getting_started.md  intro.md  serverless.md  writing_schemas.md
docs/src/core/: auth.md  getting_started.md  queries_mutations.md
examples/: .env  .env.development  .env.local.example  Cargo.toml  README.md  create_jwt.rs  schema.in  server.rs  subscriptions_server.rs
examples/dev_utils/: Cargo.toml
examples/dev_utils/src/: db.rs  errors.rs  lib.rs  load_env.rs
examples/dev_utils/src/schemas/: users.rs
examples/graphql_server/: Cargo.toml
examples/graphql_serverless/: Cargo.toml  build.sh
examples/graphql_serverless/public/: index.html
examples/netlify/: build.sh  main.rs  netlify.toml  schema.rs
examples/netlify/public/: index.html
examples/schema/: main.rs  schema.rs
examples/subscriptions_server/: Cargo.toml
graphql_server/: Cargo.toml
graphql_serverless/: Cargo.toml  build.sh  netlify.toml
integrations/serverful/actix-web/: Cargo.toml  README.md
integrations/serverful/actix-web/examples/: server.rs  subscriptions_server.rs
integrations/serverful/actix-web/src/: auth_middleware.rs  create_graphql_server.rs  create_subscriptions_server.rs  lib.rs  routes.rs
integrations/serverful/actix-web/tests/: e2e.rs
integrations/serverless/aws-lambda/: Cargo.toml  README.md
integrations/serverless/aws-lambda/examples/netlify/: README.md  build.sh  main.rs
integrations/serverless/aws-lambda/src/: lib.rs  run_aws_req.rs
integrations/serverless/aws-lambda/tests/: .gitignore  e2e.rs
lib/: Cargo.toml
lib/src/: aws_serverless.rs  db.rs  errors.rs  graphql.rs  graphql_server.rs  graphql_utils.rs  lib.rs  oid.rs  options.rs  pubsub.rs  routes.rs  serverless.rs  subscriptions_server.rs
lib/src/auth/: auth_state.rs  jwt.rs  middleware.rs  mod.rs
lib/src/schemas/: users.rs
src/: aws_serverless.rs  diana_handler.rs  errors.rs  graphql.rs  graphql_server.rs  graphql_utils.rs  lib.rs  options.rs  pubsub.rs  serverless.rs  subscriptions_server.rs
src/auth/: auth_state.rs  core.rs  jwt.rs  mod.rs
subscriptions_server/: Cargo.toml
tests/: diana_handler.rs  jwt.rs  options.rs
