# Managing the API with workspaces allows us to run multiple systems in parallel
[workspace]
members = [
    "lib", # The actual module itself
    "graphql_server", # Testing of the query/mutation serverful system
    "graphql_serverless", # Testing of the query/mutation serverless system
    "subscriptions_server", # Testing of the subscription server
    "dev_utils" # The DB logic etc. for testing in a realistic way
]

# This is all optimisation for the release binaries, mainly targeted at the serverless package
# Netlify unfortunately doesn't like 20MB executables
# These drive up release compilation time significantly, but decrease binary size hugely
# Also decreases binary speed, but that's okay for Netlify because otherwise we'd be writing in JS (which would be atrocious)
# Unfortunately, we can't apply the `lto = true` optimisation because then Netlify doesn't recognise the bianry as a function
[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
