[package]
name = "dev_utils"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

[dependencies]
mongodb = "1.2.1"
async-graphql = "2.8.2"
serde = "1.0.103"
tokio = { version = "0.2.25", features = ["full"] } # `mongodb` needs an 0.2.x version
async-stream = "0.3.1"
serde_json = "1.0.44"
futures = "0.3.14"
dotenv = "0.15.0"
lib = { path = "../lib" }

[lib]
name = "dev_utils"
path = "src/lib.rs"
