[package]
name = "graphql_serverless"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.2.0"
tokio = { version = "0.2.25", features = ["macros"] }
lib = { path = "../lib" }
dev_utils = { path = "../dev_utils" }

[[bin]]
name = "serverless"
path = "bin/serverless.rs"
