[package]
name = "lib"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

[dependencies]
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
tokio = { version = "0.2.25", features = ["full"] } # `mongodb` needs an 0.2.x version
async-graphql = "2.8.2"
async-graphql-actix-web = "2.8.2"
actix-web = "3.3.2"
futures = "0.3.14"
reqwest = { version = "0.10.10", default-features = false, features = ["rustls-tls", "json"] }
async-stream = "0.3.1"
tokio-stream = "0.1.5"
error-chain = "0.12.4"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
netlify_lambda_http = "0.2.0"
aws_lambda_events = "0.4.0"

[lib]
name = "lib"
path = "src/lib.rs"
