[package]
name = "diana-actix-web"
description = "The integration between Diana GraphQL and Actix Web."
version = "0.2.8"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/diana-graphql/diana"
homepage = "https://diana-graphql.github.io"
keywords = ["graphql", "serverless", "authentication"]
categories = ["web-programming", "web-programming::http-server", "web-programming::websocket"]
include = [
    "src/*",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[dependencies]
diana = { path = "../../../", version = "=0.2.8" }
serde = "1.0.103"
serde_json = "1.0.44"
futures = "0.3.14"
async-graphql = "2.8.2"
async-graphql-actix-web = "2.8.2"
actix-web = "3.3.2"

[dev-dependencies]
dotenv = "0.15.0"
tokio = "1.3.0"
reqwest = { version = "0.10.10", default-features = false, features = ["rustls-tls", "json"] }
tungstenite = { version = "0.13.0", features = ["rustls-tls"] }
actix-rt = "1.1.1"

[lib]
name = "diana_actix_web"
path = "src/lib.rs"
